# rp2040-compressiontest

./: .gitmodules  README.md
.github/workflows/: pico-build.yml
src/: CMakeLists.txt  algo-brotli.c  algo-brotli.h  algo-heatshrink.c  algo-heatshrink.h  algo-snappy.c  algo-snappy.h  algo-snappyc.c  algo-snappyc.h  algo-zlib.c  algo-zlib.h  algo-zstd.c  algo-zstd.h  main.c  picotool_binary_information.h
